--- a/README.Rmd
+++ b/README.Rmd
@@ -9,6 +9,7 @@ editor_options:
 ```{r, echo = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
+  fig.align = "center",
   comment = "#>",
   fig.path = "man/figures/figures-"
 )
