--- a/vignettes/sensemakr.Rmd
+++ b/vignettes/sensemakr.Rmd
@@ -56,7 +56,7 @@ library(sensemakr)
 data("darfur")
 ```
 
-The "treatment" variable of interest is `directlyharmed`, which indicates whether the individual was physically injured during attacks on villages in Darfur, between 2003 and 2004. The main outcome of interest is `peacefactor`, an index measure of pro-peace attitudes.  Other covariates in the data include: `vilage` (a factor variable indicating the original village of the respondent), `female` (a binary indicator of gender), `age`, `herder_dar` (whether they were a herder in Darfur), `farmer_dar` (whether they were a farmer in Darfur), and `past_voted` (whether they report having voted in an earlier election, prior to the conflict). For further details, see `?darfur`.
+The "treatment" variable of interest is `directlyharmed`, which indicates whether the individual was physically injured during attacks on villages in Darfur, between 2003 and 2004. The main outcome of interest is `peacefactor`, an index measure of pro-peace attitudes.  Other covariates in the data include: `village` (a factor variable indicating the original village of the respondent), `female` (a binary indicator of gender), `age`, `herder_dar` (whether they were a herder in Darfur), `farmer_dar` (whether they were a farmer in Darfur), and `past_voted` (whether they report having voted in an earlier election, prior to the conflict). For further details, see `?darfur`.
 
 
 Violence against civilians included aerial bombardments by the government as well as assaults by the *Janjaweed*, a pro-government militia. While some villages were selected for more exposure to violence, within village violence was largely indiscriminate. The bombing could not be finely targetted, and the *Janjaweed* had little information about civilians which to attack, with one major exception: women were targeted for sexual assault.
@@ -211,7 +211,7 @@ The default option for the extreme scenarios is `r2yz.dx = c(1, .75, .5)`, which
 
 Having gone through the basic functionality of the package, here we  recall some caveats on intepretation that applies to any sensitivity analyses. 
 
-The results computed by `sensemakr()` tell us what we need to be prepared to believe, in order to maintain the claim originally made: that exposure to violence, on average, had a large positive effect in attitudes towards peace, in Darfur 2003-2004. In particular, the results of the sensitivity analysis performed here show that, to explain all the observed estimated effect, even in a worst case scenario where the unobserved confounder explains all residual variation of the outcome, this unobserved confounder would need to be at least more than twice as strongly associated with the treatment as the covariate Female. This is a *true quantitative statement* that describes the strength of confounding needed to overturn the research conclusions. 
+The results computed by `sensemakr()` tell us what we need to be prepared to believe, in order to maintain the claim originally made: that exposure to violence, on average, had a large positive effect in attitudes towards peace, in Darfur 2003-2004. In particular, the results of the sensitivity analysis performed here show that, to explain all the observed estimated effect, even in a worst case scenario where the unobserved confounder explains all residual variation of the outcome, this unobserved confounder would need to be at least more than twice as strongly associated with the treatment as the covariate `female`. This is a *true quantitative statement* that describes the strength of confounding needed to overturn the research conclusions. 
 
 The analysis, however, says nothing about whether such a confounder does or does not exist. What it does is to *discipline the discussion* regarding the causal interpretation of the effect estimate:
 
