--- a/vignettes/jss_sensemakr.Rmd
+++ b/vignettes/jss_sensemakr.Rmd
@@ -37,6 +37,7 @@ bibliography: sensemakr.bib
 biblio-style: jss      #Added Citation style is listed to use in JSS Instructions for Authors.
 editor_options: 
   chunk_output_type: console
+graphics: yes
 ---
 
 ```{r setup, include=FALSE}
@@ -52,8 +53,9 @@ rm(list = ls())
 ## - out.width and out.height just resize the image
 ## 250px seems optimal, and takes less than half a page.
 ## for extreme plots, change manually fig.width to 6 and out.width to 350px
-opts_chunk$set(fig.width=4.5, 
-               fig.height=4.5, 
+opts_chunk$set(fig.width = 4.5, 
+               fig.height = 4.5, 
+               fig.pos = "!p",
                message = FALSE, 
                out.width='250px', 
                out.height='250px',
@@ -473,8 +475,16 @@ The previous sensitivity table  provides a good summary of how robust the curren
 
 As contour plots for the point estimate are the default, we start by examining those.
 
-```{r}
+```{r, eval = FALSE}
 plot(darfur.sensitivity)
+```
+
+```{r, echo = FALSE, fig.width=8, fig.height=4, out.width='400px',  out.height='200px'}
+# make plots appear together
+old.par <- par(mfrow = c(1,2))
+plot(darfur.sensitivity)
+plot(darfur.sensitivity, sensitivity.of = "t-value")
+par(old.par)
 ```
 
 The horizontal axis shows the hypothetical residual share of variation of the treatment that unobserved confouding explains, $R^2_{D\sim Z| {\bf X} }$. The vertical axis shows the hypothetical partial $R^2$ of unobserved confouding with the outcome, $R^2_{Y\sim Z| {\bf X}, D}$. The contours show what would be the estimate for `directlyharmed` that one would have obtained in the full regression model including unobserved confounders with such hypothetical strengths. Note the plot is parameterized in way that hurts our preferred hypothesis, by pulling the estimate towards zero---the direction of the bias was set in the argument `reduce = TRUE` of `sensemakr()`.
@@ -485,7 +495,7 @@ The bounds on the strength of confouding, determined by the parameter `kd = 1:3`
 We now examine the sensitivity of the *t-value* for testing the null hypothesis of zero effect. For this, it suffices to change the option `sensitivity.of = "t-value"`.
 
 
-```{r}
+```{r, eval = FALSE}
 plot(darfur.sensitivity, sensitivity.of = "t-value")
 ```
 
@@ -495,7 +505,7 @@ The plot revelas that, at the 5% significance level, the null hypothesis of zero
 
 Sometimes researches may be better equipped to make plausibility judgments about the strength of determinants of the treatment assignment mechanism, and have less knowledge about the determinantes of the outcome. In those cases, *extreme scenarios* sensitivity plots may be an option.  For this plot, user should choose the option `type = extreme`. Here one assumes confounding explains **all** or a large fraction of the residual variance of the outcome, and examine how the point estimate is affected under different hypothetical strenghts of the association of the confounder with the treatment. 
 
-```{r, fig.width=6}
+```{r, fig.width=6, out.width="350px"}
 plot(darfur.sensitivity, type = "extreme")
 ```
 
@@ -741,6 +751,11 @@ embed_png <- function(path, dpi = NULL) {
 ```{r, echo=FALSE}
 embed_png(path = "collider.png", dpi = 400)
 ```
+\begin{figure}
+\centering
+\includegraphics[width = 4in, height = 4in]{collider.png}
+\caption{DAG of ...}
+\end{figure}
 
 That is, although $Z$ is *marginally* independent of $X$, note that $Z$ is not *conditionally* independent of $X$, *given* $D$, because $D$ is a *collider* (Pearl, 2009). This distorts the observed quantities of $X$ that are being used for benchmarking.
 
