--- a/vignettes/jss_sensemakr.Rmd
+++ b/vignettes/jss_sensemakr.Rmd
@@ -4,15 +4,23 @@ author:
   - name: Carlos Cinelli 
     affiliation: University of California, Los Angeles
     address: >
-      Department of Statistics
+      Department of Statistics,
       8125 Math Sciences Building,
       Los Angeles, CA 90095, USA.
     email: \email{carloscinelli@ucla.edu}
     url: http://carloscinelli.com
+  - name: Jeremy Ferwerda
+    affiliation: Dartmouth College
+    address: >
+      Department of Government, 
+      Hanover, NH 03755
+    email: \email{jeremy.a.ferwerda@dartmouth.edu}
+    url: http://jeremyferwerda.com/
+
   - name: Chad Hazlett
     affiliation: University of California, Los Angeles
     address: >
-      Department of Statistics
+      Department of Statistics, 
       8125 Math Sciences Building, 
       Los Angeles, CA 90095, USA.
     email: \email{chazlett@ucla.edu}
@@ -53,13 +61,13 @@ rm(list = ls())
 ## - out.width and out.height just resize the image
 ## 250px seems optimal, and takes less than half a page.
 ## for extreme plots, change manually fig.width to 6 and out.width to 350px
-opts_chunk$set(fig.width = 4.5, 
+opts_chunk$set(fig.width  = 4.5, 
                fig.height = 4.5, 
-               fig.pos = "!p",
-               message = FALSE, 
-               out.width='250px', 
-               out.height='250px',
-               fig.align = "center")
+               fig.pos    = "!tp",
+               message    = FALSE, 
+               out.width  = '250px', 
+               out.height = '250px',
+               fig.align  = "center")
 
 opts_chunk$set(tidy = FALSE)
 
@@ -67,7 +75,8 @@ hook_output = knit_hooks$get('output')
 
 knit_hooks$set(output = function(x, options) {
   # this hook is used only when the linewidth option is not NULL
-  if (!is.null(n <- options$linewidth)) {
+  n <- options$linewidth
+  if (!is.null(n)) {
     x = knitr:::split_lines(x)
     # any lines wider than n should be wrapped
     if (any(nchar(x) > n)) x = strwrap(x, width = n)
@@ -335,11 +344,8 @@ During 2003 and 2004, the Darfurian government promoted a horrific violence camp
 
 The `sensemakr` package comes with an example dataset drawn from a survey on attitudes of Darfurian refugees in eastern Chad, regarding this unfortunate episode (Hazlett, 2019). The data can be loaded with the command `data("darfur")`.
 
-```{r, message=FALSE}
-# loads package
+```{r pkg_data, message=FALSE}
 library(sensemakr)
-
-# loads data
 data("darfur")
 ```
 
@@ -350,18 +356,19 @@ Violence against civilians included aerial bombardments by the government as wel
 
 Given these considerations, a researcher may argue that adjusting for `village` and `female` is sufficient for control of confounding, and run the following linear regression model (in which other pre-treatment covariates, although not necessary for identification, are also included):
 
-```{r}
-# runs regression model
+```{r darfur_model}
 darfur.model <- lm(peacefactor ~ directlyharmed  + village +  female +
-                     age + farmer_dar + herder_dar + 
-                     pastvoted + hhsize_darfur, 
+                                 age + farmer_dar + herder_dar + 
+                                 pastvoted + hhsize_darfur, 
                    data = darfur)
 ```
 
 This regression model results in the following estimates:
 
-```{r, echo=FALSE,  results = 'asis'}
-stargazer::stargazer(darfur.model, keep = "directlyharmed", type = "latex")
+```{r stargazer_darfur, echo=FALSE,  results = 'asis'}
+stargazer::stargazer(darfur.model, 
+                     keep = "directlyharmed", 
+                     type = "latex", header = FALSE)
 ```
 
 That is, we find that, those exposed to violence were on average, more pro-peace. 
@@ -374,7 +381,7 @@ For example, one may argue that, athough the bombing was crude, bombs were still
 
 This suggest that, instead of the previous linear model ( `darfur.model` ), we should have run the model below,
 
-```{r, eval=FALSE}
+```{r darfur_complete, eval=FALSE}
 darfur.complete.model <- lm(peacefactor ~ directlyharmed  + village +  
                               female + age + farmer_dar + herder_dar + 
                               pastvoted + hhsize_darfur +
@@ -391,9 +398,7 @@ Additionally,  we have domain knowledge regarding the main determinants of expos
 
 The main function of the package is `sensemakr()`. This function performs the most common sensitivity analyses, which can be then be explored with the print, summary and plot methods (see details in `?print.sensemakr` and `?plot.sensemakr`). We begin the analysis by applying sensemakr to the original regression model, `darfur.model`:
 
-```{r, results = 'asis'}
-# runs sensemakr for sensitivity analysis
-# in the darfur example
+```{r sesemakr_darfur}
 darfur.sensitivity <- sensemakr(model = darfur.model, 
                                 treatment = "directlyharmed",
                                 benchmark_covariates = "female",
@@ -422,7 +427,7 @@ The arguments here are:
 
 Using the default arguments, one can simplify the previous call to:
 
-```{r}
+```{r sensemakr_darfur_defaults}
 darfur.sensitivity <- sensemakr(model = darfur.model, 
                                 treatment = "directlyharmed",
                                 benchmark_covariates = "female",
@@ -435,18 +440,18 @@ We can now explore the sensitivity analysis results.
 
 The print method of `sensemakr` provides a quick review of the original (unadjusted) estimate along with three summary sensitivity statistics suited for *routine reporting*: the partial R2 of the treatment with the outcome, the robustnuess value (RV) required to reduce the estimate entirely to zero (i.e. $q=1$), and the RV beyond which the estimate would no longer be statistically distinguishable from zero at the 0.05 level ($q=1$, $\alpha=0.05$). 
 
-```{r}
+```{r darfur_print}
 darfur.sensitivity
 ```
 
 The package also provides a function that creates a latex or html table with these results, as shown below (for the html table, simply change the argument to `format = "html"`). 
 
 
-```{r, eval = FALSE}
+```{r latex_table_call, eval = FALSE}
 ovb_minimal_reporting(darfur.sensitivity, format = "latex")
 ```
 
-```{r, echo = FALSE, results='asis'}
+```{r latex_table_real, echo = FALSE, results='asis'}
 ovb_minimal_reporting(darfur.sensitivity, format = "latex")
 ```
 
@@ -464,7 +469,7 @@ Sometimes researchers may have a hard time making judgments regarding the *absol
 
 All these results are exact for a single unobserved confounder, and conservative for multiple confounders, possibly acting non-linearly. Finally, the summary method for `sensemakr` provides an extensive report with verbal descriptions of the results, similar to the explanation we have given above. For further details, please refer to [Cinelli and Hazlett (2020)](https://rss.onlinelibrary.wiley.com/doi/full/10.1111/rssb.12348). 
 
-```{r, results='hide'}
+```{r summary, results='hide'}
 summary(darfur.sensitivity)
 ```
 
@@ -475,16 +480,8 @@ The previous sensitivity table  provides a good summary of how robust the curren
 
 As contour plots for the point estimate are the default, we start by examining those.
 
-```{r, eval = FALSE}
+```{r estimate_plot_call, eval = FALSE}
 plot(darfur.sensitivity)
-```
-
-```{r, echo = FALSE, fig.width=8, fig.height=4, out.width='400px',  out.height='200px'}
-# make plots appear together
-old.par <- par(mfrow = c(1,2))
-plot(darfur.sensitivity)
-plot(darfur.sensitivity, sensitivity.of = "t-value")
-par(old.par)
 ```
 
 The horizontal axis shows the hypothetical residual share of variation of the treatment that unobserved confouding explains, $R^2_{D\sim Z| {\bf X} }$. The vertical axis shows the hypothetical partial $R^2$ of unobserved confouding with the outcome, $R^2_{Y\sim Z| {\bf X}, D}$. The contours show what would be the estimate for `directlyharmed` that one would have obtained in the full regression model including unobserved confounders with such hypothetical strengths. Note the plot is parameterized in way that hurts our preferred hypothesis, by pulling the estimate towards zero---the direction of the bias was set in the argument `reduce = TRUE` of `sensemakr()`.
@@ -495,8 +492,20 @@ The bounds on the strength of confouding, determined by the parameter `kd = 1:3`
 We now examine the sensitivity of the *t-value* for testing the null hypothesis of zero effect. For this, it suffices to change the option `sensitivity.of = "t-value"`.
 
 
-```{r, eval = FALSE}
+```{r t_plot_call, eval = FALSE}
 plot(darfur.sensitivity, sensitivity.of = "t-value")
+```
+
+```{r, echo=FALSE}
+fig.cap <- "\\label{fig:darfur_contours}Sensitivity contour plots of point estimate (left) and t-value (right)"
+```
+
+```{r both_plots_real, echo = FALSE, fig.width=8, fig.height=4, out.width='420px',  out.height='210px', fig.cap=fig.cap}
+# make plots appear together
+old.par <- par(mfrow = c(1,2))
+plot(darfur.sensitivity)
+plot(darfur.sensitivity, sensitivity.of = "t-value")
+par(old.par)
 ```
 
 The plot revelas that, at the 5% significance level, the null hypothesis of zero effect would still be rejected given confounders once or twice as strong as `female`. However, differently from the exact point-estimate, accounting for sampling uncertainty now means that the null hypothesis of zero effect *would not* be rejected with the inclusion of a confounder three times as strong as `female`. 
@@ -505,11 +514,11 @@ The plot revelas that, at the 5% significance level, the null hypothesis of zero
 
 Sometimes researches may be better equipped to make plausibility judgments about the strength of determinants of the treatment assignment mechanism, and have less knowledge about the determinantes of the outcome. In those cases, *extreme scenarios* sensitivity plots may be an option.  For this plot, user should choose the option `type = extreme`. Here one assumes confounding explains **all** or a large fraction of the residual variance of the outcome, and examine how the point estimate is affected under different hypothetical strenghts of the association of the confounder with the treatment. 
 
-```{r, fig.width=6, out.width="350px"}
+```{r darfur_extreme, fig.width=6, out.width="350px"}
 plot(darfur.sensitivity, type = "extreme")
 ```
 
-The default option for the extreme scenarios is `r2yz.dx = c(1, .75, .5)`, which sets the association of confounders  with outcome to  $R^2_{Y\sim Z| {\bf X}, D}$=100%,  $R^2_{Y\sim Z| {\bf X}, D}$=75%  and  $R^2_{Y\sim Z| {\bf X}, D}$=50%. The bounds on the strength of association of a confounder once, twice or three times as strongly associated with the treatment as `female` are shown as red ticks in the horizonal axis.  As the plot shows, even in the most extreme case of $R^2_{Y\sim Z| {\bf X}, D}$=100%, confounders would need to be more than twice as strongly associated with the treatment to fully explain away the point estimate. Moving to  the scenarios $R^2_{Y\sim Z| {\bf X}, D}$=75%  and  $R^2_{Y\sim Z| {\bf X}, D}$=50%, confounders would need to be more than three times as strongly associated with the treatment to fully explain away the point estimate.
+The default option for the extreme scenarios is `r2yz.dx = c(1, .75, .5)`, which sets the association of confounders  with outcome to  $R^2_{Y\sim Z| {\bf X}, D} = 100\%$,  $R^2_{Y\sim Z| {\bf X}, D}=75\%$  and  $R^2_{Y\sim Z| {\bf X}, D}=50\%$. The bounds on the strength of association of a confounder once, twice or three times as strongly associated with the treatment as `female` are shown as red ticks in the horizonal axis.  As the plot shows, even in the most extreme case of $R^2_{Y\sim Z| {\bf X}, D}=100\%$, confounders would need to be more than twice as strongly associated with the treatment to fully explain away the point estimate. Moving to  the scenarios $R^2_{Y\sim Z| {\bf X}, D}=75\%$  and  $R^2_{Y\sim Z| {\bf X}, D}=50\%$, confounders would need to be more than three times as strongly associated with the treatment to fully explain away the point estimate.
 
 ## A disciplined discussion about confounding
 
@@ -664,7 +673,7 @@ Y &= X + Z + U_y
 Also note that, in this model: (i) the unobserved confounder $Z$ is independent of $X$; and, (ii) the unobserved confounder $Z$ is *exactly like* $X$ in terms of its strength of association with the treatment and the outcome. The code below creates a sample of size 10,000 of this data generating process.
 
 
-```{r}
+```{r bench_sim_data}
 # sets seed for reproducibility
 set.seed(12345)
 
@@ -681,10 +690,14 @@ Y <- X + Z + rnorm(n)
 
 In this example, the investigator does not observe the confounder $Z$. Therefore, she is forced to fit the restricted linear model $Y \sim D + X$, resulting in the following estimated values
 
-```{r}
+```{r bench_lm}
 model.ydx <- lm(Y ~ D + X) 
-summary(model.ydx)
 ```
+
+```{r stargazer_bench, echo=FALSE, results='asis'}
+stargazer::stargazer(model.ydx, header = FALSE, keep = "D")
+```
+
 Note we obtain a large and statistically significant coefficient estimate of the effect of $X$ on $Y$ ($0.5$). However, we know that the variable $Z$ is not observed, and there is the fear that this estimated effect is in fact due to the bias caused by $Z$. On the other hand, let us suppose the investigator correctly know that: (i) $Z$ and $X$ have the same strength of association with $D$ and $Y$; and, (ii) $Z$ is independent of $X$. Can we leverage this information to undersand how much bias a confounder $Z$ "not unlike" $X$ could cause?
 
 
@@ -692,12 +705,9 @@ Note we obtain a large and statistically significant coefficient estimate of the
 
 Computing the bias due to the omission of $Z$ requires two sensitivity parameters: its partial $R^2$ with the treatment $D$ and its partial $R^2$ with the outcome $Y$. How could we go about computing the bias that a confounder $Z$ "not unlike $X$" would cause? 
 
-Intuitively, it seems that we could take as reference the observed partial $R^2$ of $X$ with $D$ and $Y$, and use those as the plausible values for the sensitivity parameters. That's the essence of many informal benchmarking proposals. So llet us now compute those observed partial $R^2$ using the `partial_r2()` function of `sensemakr`. For the partial $R^2$ of $X$ with the treatment, we also need to fit a treatment regression $D \sim X$ first.
+Intuitively, it seems that we could take as reference the observed partial $R^2$ of $X$ with $D$ and $Y$, and use those as the plausible values for the sensitivity parameters. That's the essence of many informal benchmarking proposals. So let us now compute those observed partial $R^2$ using the `partial_r2()` function of `sensemakr`. For the partial $R^2$ of $X$ with the treatment, we also need to fit a treatment regression $D \sim X$ first.
 
-```{r}
-# loads sensemakr package
-library(sensemakr)
-
+```{r partial_r2_informal}
 # fits treatment regression
 model.dx <- lm(D ~ X)
 
@@ -708,18 +718,18 @@ r2dx   <- partial_r2(model.dx, covariates = "X")
 
 Once both partial $R^2$ are computed, we can determine the implied adjusted estimate due to an unobserved confounder $Z$ using the `adjusted_estimate()` function. 
 
-```{r}
-informal_adjusted_estimate <- adjusted_estimate(model.ydx, 
+```{r informal_adj_estimate}
+informal_adjusted_estimate <- adjusted_estimate(model     = model.ydx, 
                                                 treatment = "D", 
-                                                r2dz.x = r2dx, 
-                                                r2yz.dx = r2yx.d)
+                                                r2dz.x    = r2dx, 
+                                                r2yz.dx   = r2yx.d)
 ```
 
 We can now plot the sensitivity contours with `ovb_contour_plot()` and add our informal benchmark with the numeric method of `add_bound_to_contour()`. The arguments `label.bump.x` and `label.bump.y` of these functions allow adjusting the position of the bound label in the plot.
 
 ```{r, fig.align='center'}
 # draws sensitivity contours
-ovb_contour_plot(model.ydx,  
+ovb_contour_plot(model = model.ydx,  
                  treatment = "D", 
                  lim = .6)
 
@@ -734,26 +744,9 @@ As we can see, the results of the informal benchmark are different from what we 
 
 As explained in Section 6.1 of [Cinelli and Hazlett (2020)](https://doi.org/10.1111/rssb.12348), there are two problems affecting informal benchmarks in this setting. First, we have to make an adjustment of baseline variance to be explained, since the sensitivity parameters consider the partial $R^2$ of $Z$ with the outcome, after taking into account what is already explained by $X$. Second, consider the DAG of our structural model:
 
-
-```{r, echo = FALSE}
-embed_png <- function(path, dpi = NULL) {
-  meta <- attr(png::readPNG(path, native = TRUE, info = TRUE), "info")
-  if (!is.null(dpi)) meta$dpi <- rep(dpi, 2)
-  knitr::asis_output(paste0(
-    "<img src='", path, "'",
-    " width=", round(meta$dim[1] / (meta$dpi[1] / 96)),
-    " height=", round(meta$dim[2] / (meta$dpi[2] / 96)),
-    " style='display: block; margin: auto;'/>"
-  ))
-}
-```
-
-```{r, echo=FALSE}
-embed_png(path = "collider.png", dpi = 400)
-```
 \begin{figure}
 \centering
-\includegraphics[width = 4in, height = 4in]{collider.png}
+\includegraphics[width = 2in, height = 2in]{collider.png}
 \caption{DAG of ...}
 \end{figure}
 
