--- a/vignettes/informal_benchmarking.Rmd
+++ b/vignettes/informal_benchmarking.Rmd
@@ -33,13 +33,13 @@ embed_png <- function(path, dpi = NULL) {
 
 ## Introduction
 
-In this section, we show how to replicate the example in Section 6.1 of [Cinelli and Hazlett (2020)](https://doi.org/10.1111/rssb.12348) using the R package `sensemakr`. This example is especially useful to illustrate how users can construct their own sensitivity contour plots with customized bounds, and it also shows the risks of informal benchmarking procedures that are still widespread in the sensitivity analysis literature (e.g., Imbens, 2003; Blackwell, 2013; Hosman et al. 2010, Dorie et al., 2016, Hong et al. 2018). 
+Informal "benchmarking" approaches have been employed by numerous earlier sensitivity analyses as a means to aid interpreting by describing how confounding "not unlike" some observed covariate would alter results (e.g., Imbens, 2003; Blackwell, 2013; Hosman et al. 2010, Dorie et al., 2016, Hong et al. 2018). [Cinelli and Hazlett (2020)](https://doi.org/10.1111/rssb.12348) show why these approaches sometimes lead to erroneous conclusions, and offer a more formal approach rooted in bounding the bias that could be produced by unobserved confounding when we assume it has particular relative "strength" compared to an observed covariate. 
+
+To aid in understanding and appreciating the risk of informal benchmarking procedures, this vignette replicates the example in Section 6.1 of [Cinelli and Hazlett (2020)](https://doi.org/10.1111/rssb.12348), in which such benchmarks produce clearly misleading results. Further, replicating this example with the `sensemakr` provides a useful tutorial on how users can construct their own sensitivity contour plots with customized bounds rather than relying only on higher level functions.
 
 ## Background
 
-Section 4.4 of [Cinelli and Hazlett (2020)](https://doi.org/10.1111/rssb.12348)  shows how it is possible to bound the maximum strength of confounding given relative judgments on how the strength unobserved variables compares to the strength of observed variables. You can compute those bounds with the `sensemakr` package using the function `ovb_bounds()`
-
-Prior work in sensitivity analysis---dating back at least to Imbens (2003), and followed by others (e.g, Hosman et al. 2010, Dorie et al., 2016, Hong et al. 2018)---has also proposed comparing observables with unobservables, but has done so by informally using statistics of observed variables to "calibrate intuitions" about sensitivity parameters concerning the unobserved variable. This practice, however, can have undesirable consequences as we show next.
+Prior work in sensitivity analysis---dating back at least to Imbens (2003), and followed by others (e.g, Hosman et al. 2010, Dorie et al., 2016, Hong et al. 2018)---hasproposed comparing observables with unobservables by informally using statistics of observed variables to "calibrate intuitions" about sensitivity parameters concerning the unobserved variable. This practice, however, can have undesirable consequences, illustrated below. Section 4.4 of [Cinelli and Hazlett (2020)](https://doi.org/10.1111/rssb.12348) provides an alternative. This approach, bounding the maximum strength of confounding given relative judgments on how the strength unobserved variables compares to the strength of observed variables. The `sensemakr` package allows us to compute bounds given an assumption about how confounding compares to observed covariates, using the function `ovb_bounds()`, which we demonstrate below.
 
 ## Simulating the data
 
